add mobile tablet and desktop layouts

--- a/product-listing/index.html
+++ b/product-listing/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Auto Example</title>
   <meta name="description" content="">
@@ -56,20 +57,34 @@
 
     <section class="main">
       <section class="hero">
-        <div class="inner-box">
-          <a href="#">Truck Accessories ></a>
-          <h3>WHEELS & RIMS</h3>
-        </div>
       </section>
+      <div class="inner-box">
+        <a href="#">Truck Accessories ></a>
+        <h3>WHEELS & RIMS</h3>
+      </div>
       <section class="products">
 
         <div class="product-filter-wrapper">
 
           <header class="filter-header">
             <div class="filter-status">
+              1 - 30 of 422
+            </div>
+            <div class="filter-status-large">
               Showing 1 - 30 of 422 results
             </div>
+
             <div class="filter-controls">
+              <div class="sort-by-control">
+                <label for="sort-by">Sort</label>
+                <select name="sort-by">
+                  <option>Recommended</option>
+                  <option>Price (low to high)</option>
+                </select>
+              </div>
+            </div>
+
+            <div class="filter-controls-large">
               <div class="show-select">
                 <label for="show-num">Show:</label>
                 <input id="show-num" name="show-num" type="number" value="30"/>
@@ -81,7 +96,6 @@
                   <option>Price (low to high)</option>
                 </select>
               </div>
-            </div>
           </header>
         </div>
 
